--- a/pagadurias/templates/pagaduriasAprobacion.html
+++ b/pagadurias/templates/pagaduriasAprobacion.html
@@ -10,9 +10,9 @@
             <thead>
                 <tr class="bg-blue-650 text-white uppercase text-sm leading-normal">
                     <th class="py-3 px-4 text-center">Pagaduría</th>
+                    <th class="py-3 px-4 text-center">Estado Comercial</th>
                     <th class="py-3 px-4 text-center">Estado Financiero</th>
                     <th class="py-3 px-4 text-center">Estado Riesgos</th>
-                    <th class="py-3 px-4 text-center">Estado Comercial</th>
                     <th class="py-3 px-4 text-center">Acciones</th>
                 </tr>
             </thead>
@@ -20,6 +20,11 @@
                 {% for pagaduria in pagadurias %}
                 <tr class="border-b border-gray-600 hover:bg-blue-50 transition duration-300">
                     <td class="py-3 px-4 text-center font-semibold">{{ pagaduria.nombre }}</td>
+                    <td class="py-3 px-4 text-center">
+                        <span class="px-2 py-1 text-xs font-semibold text-white rounded-lg {% if pagaduria.estadoComercial == 'Aprobado' %} bg-green-500 {% elif pagaduria.estadoComercial == 'Pendiente' %} bg-yellow-500 {% else %} bg-red-500 {% endif %}">
+                            {{ pagaduria.estadoComercial }}
+                        </span>
+                    </td>
                     <td class="py-3 px-4 text-center font-semibold">
                         <span class="px-2 py-1 text-xs font-semibold text-white rounded-lg {% if pagaduria.estadoFinanciero == 'Aprobado' %} bg-green-500 {% elif pagaduria.estadoFinanciero == 'Pendiente' %} bg-yellow-500 {% else %} bg-red-500 {% endif %}">
                             {{ pagaduria.estadoFinanciero }}
@@ -31,28 +36,23 @@
                         </span>
                     </td>
                     <td class="py-3 px-4 text-center">
-                        <span class="px-2 py-1 text-xs font-semibold text-white rounded-lg {% if pagaduria.estadoComercial == 'Aprobado' %} bg-green-500 {% elif pagaduria.estadoComercial == 'Pendiente' %} bg-yellow-500 {% else %} bg-red-500 {% endif %}">
-                            {{ pagaduria.estadoComercial }}
-                        </span>
-                    </td>
-                    <td class="py-3 px-4 text-center">
-                        {% if request.user.area == 'Financiero' and pagaduria.estadoFinanciero == 'Pendiente' %}
+                        {% if request.user.area == 'Comercial' and pagaduria.estadoComercial == 'Pendiente' %}
+                            <a href="{% url 'check_comercial' pagaduria.nombre pagaduria.tokenControl %}" class="text-blue-500 hover:underline text-center">
+                                ✔️ Validación Comercial
+                            </a>
+                        {% elif request.user.area == 'Financiero' and pagaduria.estadoComercial == 'Aprobado' and pagaduria.estadoFinanciero == 'Pendiente' %}
                             <a href="{% url 'check_financiero' pagaduria.nombre pagaduria.tokenControl %}" class="text-blue-500 hover:underline text-center">
                                 ✔️ Validación Financiero
                             </a>
-                        {% elif request.user.area == 'Riesgos' and pagaduria.estadoFinanciero == 'Aprobado' and pagaduria.estadoRiesgos == 'Pendiente' %}
+                        {% elif request.user.area == 'Riesgos' and pagaduria.estadoFinanciero == 'Aprobado' and pagaduria.estadoComercial == 'Aprobado' and pagaduria.estadoRiesgos == 'Pendiente' %}
                             <a href="{% url 'check_riesgos' pagaduria.nombre pagaduria.tokenControl %}" class="text-blue-500 hover:underline text-center">
                                 ✔️ Validación Riesgos
-                            </a>
-                        {% elif request.user.area == 'Comercial' and pagaduria.estadoFinanciero == 'Aprobado' and pagaduria.estadoRiesgos == 'Aprobado' and pagaduria.estadoComercial == 'Pendiente' %}
-                            <a href="{% url 'check_comercial' pagaduria.nombre pagaduria.tokenControl %}" class="text-blue-500 hover:underline text-center">
-                                ✔️ Validación Comercial
                             </a>
                         {% elif pagaduria.checkRechazoFinanciera %}
                             <a href="" class="">
                                 Revisar {{ request.user}}
                             </a>
-                            {% endif %}
+                        {% endif %}
                             <a href="{% url 'check_rechazo' pagaduria.nombre pagaduria.tokenControl %}" class="">
                                 Modificar
                             </a>
