--- a/pagadurias/templates/createPagaduria.html
+++ b/pagadurias/templates/createPagaduria.html
@@ -288,7 +288,7 @@
         </div>
 
         <!-- Sección 6: Documentos -->
-        {% include "components/form_documents.html" %}
+        {% include "components/form_documents.html" with type="nuevo" %}
     </form>
 </div>
 
